--- a/src/styles/TechPage.css
+++ b/src/styles/TechPage.css
@@ -6,14 +6,9 @@
   font-style: normal;
 }
 
-body{
-  overflow-x: hidden;
-  margin: 0; 
-}
 
 .no-scroll{
 overflow-y: hidden; 
-overflow-x: hidden;
 margin: 0;
 }
 
